--- a/Spirograph/Spirograph.csproj
+++ b/Spirograph/Spirograph.csproj
@@ -37,8 +37,12 @@
     <TypeScriptCompile Include="scripts\definitions\references.d.ts" />
     <TypeScriptCompile Include="scripts\Shapes\Gear.ts" />
     <TypeScriptCompile Include="scripts\Shapes\RingGear.ts" />
-    <TypeScriptCompile Include="scripts\SvgCommands\A.ts" />
-    <TypeScriptCompile Include="scripts\SvgCommands\M.ts" />
+    <TypeScriptCompile Include="scripts\SVG\ZCommand.ts" />
+    <TypeScriptCompile Include="scripts\SVG\LCommand.ts" />
+    <TypeScriptCompile Include="scripts\SVG\ACommand.ts" />
+    <TypeScriptCompile Include="scripts\SVG\MCommand.ts" />
+    <TypeScriptCompile Include="scripts\SVG\PathCommand.ts" />
+    <TypeScriptCompile Include="scripts\SVG\PathBuilder.ts" />
     <TypeScriptCompile Include="scripts\utility.ts" />
   </ItemGroup>
   <ItemGroup>
