--- a/Spirograph/Spirograph.csproj
+++ b/Spirograph/Spirograph.csproj
@@ -18,6 +18,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Content Include="favicon.ico" />
+    <Content Include="Gruntfile.js" />
     <Content Include="index.html" />
     <Content Include="scripts\lib\linq.js" />
     <Content Include="styles\app.css">
@@ -103,6 +104,8 @@
     <Content Include="styles\base.css.map">
       <DependentUpon>base.css</DependentUpon>
     </Content>
+    <Content Include=".deployment" />
+    <Content Include="package.json" />
     <None Include="web.Debug.config">
       <DependentUpon>web.config</DependentUpon>
     </None>
