--- a/Spirograph/bower.json
+++ b/Spirograph/bower.json
@@ -5,6 +5,7 @@
     "jquery": "~1.x",
     "bootstrap": "~3.x",
     "fontawesome": "4.x",
-    "d3": "~3.4.11"
+    "d3": "~3.4.11",
+    "jquery-mousewheel": "~3.1.12"
   }
 }
